corrects icon spacing

--- a/style.css
+++ b/style.css
@@ -6,10 +6,17 @@ body {
 
 header {
 	background-color: #FAFAFA;
-	a {
+}
+
+a {
+	box-sizing: border-box;
 		width: 25%;
 		display: inline-block;
 		margin-left: -3px;
 		text-align: center;
-	}
+		padding: 12px;
+}
+.fa{
+	color: 111;
+	font-size: 25px;
 }
